# Coeden

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: make-pip.yml
coeden/: __init__.py  value_tree.py
coeden/specialClasses/: base_node.py  tree_iterator.py
src/: __init__.py  tree.py  tree.test.py  tree_test.py  value_tree.py
src/specialClasses/: __init__.py  base_node.py  no_node.py  tree_iterator.py  wild_node.py
src/test/: no_node_test.py  node_test.py  tree_test.py  tree_traverse_test.py  value_node_test.py
test/: no_node_test.py  node_test.py  tree_traverse_test.py  value_node_test.py
