[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coeden"
version = "0.2.3"
authors = [
  { name="JaimeGAlonso", email="JaimeGAlonso@outlook.com" },
]
description = "Coeden is a idiomatic library to work with trees in python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
"Homepage" = "https://github.com/ElGatoNinja/Coeden"
"Bug Tracker" = "https://github.com/ElGatoNinja/Coeden/issues"